Add some code for text displays and more structure